--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
-    "mongoose": "^6.6.2"
+    "mongoose": "^6.6.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
