--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
