--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.1",
     "uuid": "^9.0.0"
   }
 }
